# git

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  _Makefile  abspath.c  add-interactive.c  add-patch.c  advice.c  advice.h  alias.c  alloc.c  apply.c  apply.h  archive-tar.c  archive-zip.c  archive.c  archive.h  attr.c  attr.h  base85.c  bisect.c  bisect.h  blame.c  blame.h  blob.c  bloom.c  bloom.h  branch.c  builtin.h  bulk-checkin.c  bundle-uri.c  bundle-uri.h  bundle.c  bundle.h  cache-tree.c  cache-tree.h  cbtree.c  (+341 more)
.github/workflows/: main.yml
Documentation/: .gitignore  doxyconfig
block-sha1/: sha1.c  sha1.h
builtin/: add.c  am.c  annotate.c  apply.c  archive.c  backfill.c  bisect.c  blame.c  branch.c  bugreport.c  bundle.c  cat-file.c  check-attr.c  check-ignore.c  check-mailmap.c  check-ref-format.c  checkout--worker.c  checkout-index.c  checkout.c  clean.c  clone.c  column.c  commit-graph.c  commit-tree.c  commit.c  config.c  count-objects.c  credential-cache--daemon.c  credential-cache.c  credential-store.c  credential.c  describe.c  diagnose.c  diff-files.c  diff-index.c  diff-tree.c  diff.c  difftool.c  fast-export.c  fast-import.c  (+85 more)
ci/: lib.sh  make-test-artifacts.sh
cleanCode/: pre-commit
compat/: access.c  apple-common-crypto.h  basename.c  bswap.h  compiler.h  disk.h  fileno.c  fopen.c  hstrerror.c  inet_ntop.c  inet_pton.c  lazyload-curl.c  memmem.c  mingw.c  mingw.h  mkdir.c  mkdtemp.c  mmap.c  nonblock.c  obstack.c  obstack.h  open.c  pread.c  precompose_utf8.c  precompose_utf8.h  qsort_s.c  regcomp_enhanced.c  setenv.c  sha1-chunked.c  snprintf.c  stat.c  strcasestr.c  strdup.c  strlcpy.c  strtoimax.c  strtoumax.c  terminal.c  terminal.h  unsetenv.c  win32.h  (+4 more)
compat/fsmonitor/: fsm-health-win32.c  fsm-ipc-win32.c  fsm-listen-darwin.c  fsm-listen-win32.c  fsm-path-utils-win32.c  fsm-settings-win32.c
compat/linux/: procinfo.c
compat/mimalloc/: mimalloc.h
compat/nedmalloc/: nedmalloc.c
compat/poll/: poll.c
compat/regex/: regcomp.c  regexec.c
compat/simple-ipc/: ipc-shared.c  ipc-unix-socket.c  ipc-win32.c
compat/vcbuild/include/: unistd.h
compat/win32/: dirent.c  flush.c  fscache.c  headless.c  path-utils.c  pthread.c  pthread.h  syslog.c  trace2_win32_process_info.c  wsl.c
components/: CMakeLists.txt  abspath.c  abspath.h  add-interactive.h  advice.h  apply.h  archive.h  attr.h  bisect.h  blame.h  blob.h  bloom.h  branch.h  builtin.h  bundle-uri.h  bundle.h  cache-tree.h  cbtree.h  checkout.h  chunk-format.h  color.h  column.h  command-list.h  commit-graph.h  commit-reach.h  commit-slab-decl.h  commit-slab-impl.h  commit-slab.h  commit.h  config.h  connected.h  convert.h  copy.h  credential.h  csum-file.h  daemon.c  date.h  decorate.h  delta.h  diagnose.h  (+139 more)
contrib/buildsystems/: CMakeLists.txt
contrib/hooks/: pre-commit
contrib/libgit-sys/: public_symbol_export.c
ewah/: bitmap.c  ewah_bitmap.c  ewah_io.c  ewah_rlw.c  ewok.h  ewok_rlw.h
negotiator/: default.c  noop.c  skipping.c
oss-fuzz/: dummy-cmd-main.c  fuzz-commit-graph.c  fuzz-config.c  fuzz-date.c  fuzz-pack-headers.c  fuzz-pack-idx.c
refs/: debug.c  files-backend.c  iterator.c  packed-backend.c  packed-backend.h  ref-cache.c  ref-cache.h  refs-internal.h  reftable-backend.c
reftable/: basics.c  basics.h  basics_test.c  block.c  block.h  block_test.c  blocksource.c  blocksource.h  constants.h  dump.c  error.c  generic.c  generic.h  iter.c  iter.h  merged.c  merged.h  merged_test.c  pq.c  pq.h  pq_test.c  publicbasics.c  reader.c  reader.h  readwrite_test.c  record.c  record.h  record_test.c  refname.c  refname.h  refname_test.c  reftable-basics.h  reftable-blocksource.h  reftable-error.h  reftable-generic.h  reftable-iterator.h  reftable-merged.h  reftable-reader.h  reftable-record.h  reftable-stack.h  (+12 more)
sha1/: openssl.h
sha1dc/: sha1.c  sha1.h  ubc_check.c  ubc_check.h
sha256/: gcrypt.h  nettle.h  openssl.h
sha256/block/: sha256.c
t/: README  t0021-conversion.sh  t7300-clean.sh  t9350-fast-export.sh
t/helper/: test-advise.c  test-bitmap.c  test-bloom.c  test-bundle-uri.c  test-cache-tree.c  test-config.c  test-date.c  test-delete-gpgsig.c  test-delta.c  test-dir-iterator.c  test-drop-caches.c  test-dump-cache-tree.c  test-dump-fsmonitor.c  test-dump-split-index.c  test-dump-untracked-cache.c  test-env-helper.c  test-example-decorate.c  test-example-tap.c  test-fake-ssh.c  test-find-pack.c  test-fsmonitor-client.c  test-genrandom.c  test-genzeros.c  test-getcwd.c  test-hash-speed.c  test-hash.c  test-hashmap.c  test-hexdump.c  test-iconv.c  test-json-writer.c  test-lazy-init-name-hash.c  test-match-trees.c  test-mergesort.c  test-mktemp.c  test-name-hash.c  test-oid-array.c  test-oidmap.c  test-oidtree.c  test-online-cpus.c  test-pack-mtimes.c  (+41 more)
t/unit-tests/: lib-oid.c  lib-reftable.c  lib-reftable.h  strvec.c  t-hash.c  t-hashmap.c  t-mem-pool.c  t-oid-array.c  t-prio-queue.c  t-reftable-basics.c  t-reftable-block.c  t-reftable-merged.c  t-reftable-pq.c  t-reftable-reader.c  t-reftable-readwrite.c  t-reftable-record.c  t-reftable-stack.c  t-reftable-tree.c  t-strbuf.c  t-strcmp-offset.c  t-trailer.c  t-urlmatch-normalization.c  test-lib.c  test-lib.h  u-ctype.c  u-example-decorate.c  u-hash.c  u-hashmap.c  u-mem-pool.c  u-prio-queue.c  u-reftable-tree.c  u-strbuf.c  u-strcmp-offset.c  u-strvec.c  unit-test.c  unit-test.h
t/unit-tests/clar/: clar.c  clar.h  generate.py
t/unit-tests/clar/clar/: fixtures.h  fs.h  print.h  sandbox.h  summary.h
t/unit-tests/clar/test/: main.c  sample.c
trace2/: tr2_cfg.c  tr2_cmd_name.c  tr2_ctr.c  tr2_ctr.h  tr2_dst.c  tr2_dst.h  tr2_sid.c  tr2_sysenv.c  tr2_sysenv.h  tr2_tbuf.c  tr2_tbuf.h  tr2_tgt_event.c  tr2_tgt_normal.c  tr2_tgt_perf.c  tr2_tls.c  tr2_tls.h  tr2_tmr.c  tr2_tmr.h
xdiff/: xdiff.h  xdiffi.c  xdiffi.h  xemit.c  xemit.h  xhistogram.c  xinclude.h  xmacros.h  xmerge.c  xpatience.c  xprepare.c  xprepare.h  xtypes.h  xutils.c  xutils.h
